# Diplomat_demo

./: .gitattributes  Cargo.toml
example/: Cargo.toml  build.rs
example/c/: CMakeLists.txt  conanfile.py  main.c
example/c/include/: FixedDecimal2.d.h  FixedDecimal2.h  Kiloath.d.h  Kiloath.h  Kiloath2.h
example/cpp/: CMakeLists.txt  conanfile.py
example/cpp/include/: Kiloath.d.hpp  Kiloath.hpp  Kiloath2.d.hpp  Kiloath2.hpp
example/cpp/include/icu4x/: FixedDecimal2.d.hpp  FixedDecimal2.hpp
example/cpp/tests/: fixeddecimal.cpp
example/src/: data_provider.rs  decimal.rs  kiloath.rs  lib.rs
rice_01_ffi/: Cargo.toml
rice_01_ffi/c/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  lib.c  lib.h  main.c
rice_01_ffi/c/.devcontainer/: devcontainer.json
rice_01_ffi/c/include/: Kiloath2.d.h
rice_01_ffi/c_bin/: CMakeLists.txt  conanfile.py
rice_01_ffi/c_bin/include/: rice01.h
rice_01_ffi/c_bin/src/: main.c  rice01.cpp
rice_01_ffi/c_bin/test_package/: CMakeLists.txt  conanfile.py
rice_01_ffi/c_bin/test_package/src/: example.cpp
rice_01_ffi/cpp/include/: Kiloath2.d.hpp
rice_01_ffi/src/: kiloath.rs  lib.rs
