[package]
name = "diplomat-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
diplomat = "0.9.0"
diplomat-runtime = "0.9.0"
icu = "1.5.0"
icu_provider = { version = "1.5.0", features = ["serde"] }
icu_testdata = "1.5.0"
writeable = "0.6.0"
fixed_decimal = "0.6.0"
# icu_provider = { version = "1.5", features = ["serde"] }
# icu_testdata = { version = "1.2" }
encoding_rs = "0.8"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "icu4x_bench"
harness = false

[build-dependencies]
diplomat-tool = "0.9.0"
